fix : overflow home page

--- a/src/css/AboutMe.css
+++ b/src/css/AboutMe.css
@@ -11,4 +11,8 @@
         margin-top: 1%;
         margin-left: 2%;
     }
+
+    .aboutMe p{
+        width: 90%;
+    }
 }
