--- a/src/css/Studies.css
+++ b/src/css/Studies.css
@@ -25,5 +25,6 @@
         flex-direction: column;
     }
     .studies{
-        width: 100%;}
-  }
+        width: 90%;
+    }
+}
